# metabookly

./: .gitignore  README.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_price_and_rights.py  0003_fts_include_subjects.py  0004_add_dimensions.py  0005_publisher_portal.py  0006_retailer_account_status.py  0007_analytics_foundation.py  0008_retailer_email_fix.py  0009_basket.py  0010_retailer_settings_addresses.py  0011_distributor_settings.py  0012_orders.py  0013_retailer_profile_fields.py  0014_gratis_and_bulk_ordering.py  0015_retailer_plans_distributor_accounts.py  0016_feature_flags.py  0017_publisher_self_serve.py  0018_onix_validation_columns.py  0019_metadata_score.py  0020_arc_requests.py  0021_publisher_assets.py
apps/api/app/: config.py  main.py
apps/api/app/api/: deps.py
apps/api/app/auth/: cognito.py  models.py
apps/api/app/aws/: s3.py  secrets.py
apps/api/app/connectors/: base.py  gardners.py  mock.py  registry.py
apps/api/app/db/: base.py  engine.py  session.py
apps/api/app/models/: basket.py  book.py  feature_flags.py  onix_feed.py  ordering.py  portal.py  retailer.py
apps/api/app/parsers/: __init__.py  onix21.py  onix3.py  onix_validator.py
apps/api/app/schemas/: arc.py  book.py  catalog.py  onix.py  ordering.py  portal.py  pricing.py  retailer.py
apps/api/scripts/: generate_seed_onix.py  seed_db.py  seed_demo_retailer.py
apps/api/tests/: conftest.py  test_ai_service.py  test_parsers.py  test_portal_service.py
infra/: cdk.context.json  (+1 more)
(+171 files in other folders)
