[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metabookly-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # Validation
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "httpx==0.28.1",

    # AWS
    "boto3==1.35.86",
    "botocore==1.35.86",

    # ONIX parsing
    "lxml==5.3.0",

    # Utilities
    "python-multipart==0.0.20",
    "orjson==3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Override TEST_DATABASE_URL to point at a separate test DB:
#   TEST_DATABASE_URL=postgresql+asyncpg://metabookly:metabookly@localhost:5432/metabookly_test pytest
# CI sets this automatically via the workflow env vars.

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
